--- a/css/angularproject.css
+++ b/css/angularproject.css
@@ -1,3 +1,26 @@
+/* Simple NavBar */
+
+
+simple-nav-bar li {
+  margin: 12px 0px;  
+  display: inline-block;
+}
+
+simple-nav-bar a {
+  color: #888;
+  padding: 4px 10px;
+  text-decoration: none;
+  font-weight: bold;
+  border: solid 1px grey;
+}
+
+simple-nav-bar .active {
+  background-color: blue;
+  color: white;
+}
+
+/* Login / Register Form */
+
 .panel-login {
 	border-color: #ccc;
 	-webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
