--- a/partials/main.html
+++ b/partials/main.html
@@ -42,6 +42,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <span>{{loginForm}}</span>
                                 </form>
                                 <form id="register-form" action="http://phpoll.com/register/process" method="post" role="form" style="display: none;">
                                     <div class="form-group">
@@ -63,6 +64,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <span>{{registerForm}}</span>
                                 </form>
                             </div>
                         </div>
