--- a/partials/main.html
+++ b/partials/main.html
@@ -1,13 +1,68 @@
-        <div class="row">
+            <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#/bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#/">AngularProject</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#/">Link <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#/">Link</a></li>
+                    <li class="dropdown">
+                        <a href="#/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#/">Action</a></li>
+                            <li><a href="#/">Another action</a></li>
+                            <li><a href="#/">Something else here</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#/">Separated link</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#/">One more separated link</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="navbar-form navbar-left" role="search">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#/">Link</a></li>
+                    <li class="dropdown">
+                        <a href="#/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#/">Action</a></li>
+                            <li><a href="#/">Another action</a></li>
+                            <li><a href="#/">Something else here</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#/">Separated link</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+    <div class="container">
+    <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <div class="panel panel-login">
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-xs-6">
-                                <a href="#" class="active" id="login-form-link">Login</a>
+                                <span style="cursor:pointer;" class="active" id="login-form-link">Login</span>
                             </div>
                             <div class="col-xs-6">
-                                <a href="#" id="register-form-link">Register</a>
+                                <span style="cursor:pointer;" id="register-form-link">Register</span>
                             </div>
                         </div>
                         <hr>
@@ -15,7 +70,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-lg-12">
-                                <form id="login-form" action="http://phpoll.com/login/process" method="post" role="form" style="display: block;" ng-controller="MyCtrl1">
+                                <form id="login-form" action="" method="post" role="form" style="display: block;" ng-controller="MyCtrl1">
                                     <div class="form-group">
                                         <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="" ng-model="loginForm.username">
                                     </div>
@@ -23,13 +78,13 @@
                                         <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password" ng-model="loginForm.password">
                                     </div>
                                     <div class="form-group text-center">
-                                        <input type="checkbox" tabindex="3" class="" name="remember" id="remember" ng-model="loginForm.remember">
+                                        <input type="checkbox" tabindex="-1" class="" name="remember" id="remember" ng-model="loginForm.remember">
                                         <label for="remember"> Remember Me</label>
                                     </div>
                                     <div class="form-group">
                                         <div class="row">
                                             <div class="col-sm-6 col-sm-offset-3">
-                                                <button type="button" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In" ng-click="saveData()">Log In</button>
+                                                <button type="button" name="login-submit" id="login-submit" tabindex="3" class="form-control btn btn-login" value="Log In" ng-click="saveData()">Log In</button>
                                             </div>
                                         </div>
                                     </div>
@@ -37,13 +92,13 @@
                                         <div class="row">
                                             <div class="col-lg-12">
                                                 <div class="text-center">
-                                                    <a href="http://phpoll.com/recover" tabindex="5" class="forgot-password">Forgot Password?</a>
+                                                    <a href="#/recover" tabindex="5" class="forgot-password">Forgot Password?</a>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </form>
-                                <form id="register-form" action="http://phpoll.com/register/process" method="post" role="form" style="display: none;">
+                                <form id="register-form" action="" method="post" role="form" style="display: none;">
                                     <div class="form-group">
                                         <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="" ng-model="registerForm.username">
                                     </div>
@@ -70,3 +125,5 @@
                 </div>
             </div>
         </div>
+    </div>
+    <script src="js/angular.project.js"></script>
