--- a/partials/main.html
+++ b/partials/main.html
@@ -15,8 +15,8 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#/">Link <span class="sr-only">(current)</span></a></li>
                     <li><a href="#/">Link</a></li>
-                    <li class="dropdown">
-                        <a href="#/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <li class="dropdown" dropdown>
+                        <a href="#/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" dropdown-toggle>Dropdown <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="#/">Action</a></li>
                             <li><a href="#/">Another action</a></li>
@@ -84,7 +84,7 @@
                                     <div class="form-group">
                                         <div class="row">
                                             <div class="col-sm-6 col-sm-offset-3">
-                                                <button type="button" name="login-submit" id="login-submit" tabindex="3" class="form-control btn btn-login" value="Log In" ng-click="saveData()">Log In</button>
+                                                <button type="button" name="login-submit" id="login-submit" tabindex="3" class="form-control btn btn-login" value="Log In" ng-click="login()">Log In</button>
                                             </div>
                                         </div>
                                     </div>
@@ -98,7 +98,7 @@
                                         </div>
                                     </div>
                                 </form>
-                                <form id="register-form" action="" method="post" role="form" style="display: none;">
+                                <form id="register-form" action="" method="post" role="form" style="display: none;" ng-controller="MyCtrl1">
                                     <div class="form-group">
                                         <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="" ng-model="registerForm.username">
                                     </div>
@@ -114,7 +114,7 @@
                                     <div class="form-group">
                                         <div class="row">
                                             <div class="col-sm-6 col-sm-offset-3">
-                                                <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
+                                                <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now" ng-click="register()">
                                             </div>
                                         </div>
                                     </div>
